# sacredvote-webauthn

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/workflows/: ci.yml
src/: credential.rs  lib.rs  main.rs  server.rs
